@@ -12,6 +12,9 @@
 
 	<H3 _HD_OMIT_TOC>Bug Fixes</H3>
 
+	<LI>Remote URLs did not always work on older operating
+	systems (PR #6179)</LI>
+
 	<LI>Image filenames using % escapes were not decoded
 	properly.</LI>
 
